# qualia

./: .dockerignore  .env  .env.example  .gitignore  BACKLOG.md  CLAUDE.md  DEPLOY.md  Dockerfile  KNOWN_ISSUES.md  LICENSE  Makefile  README.md  README.v2.md  README.v3.md  SESSION_2026-03-18.md  SETUP_INFRASTRUCTURE.md  TESTING-PERFORMANCE-PLAN.md  cleanup.py  docker-compose.yml  pyproject.toml  pytest.ini  qualia.sh  requirements.txt  run_api.py  run_qualia.py  setup.py  test_cli.py  test_core.py  test_final_complete.py  test_variations_fixed.py  test_viz.py  visualize.py  📁 Arquivos Essenciais do Qualia Core Prox Sessão Infra.md  📖 DEVELOPMENT_LOG_UPDATED.md
.github/workflows/: tests.yml
configs/pipelines/: example.yaml  full_visual.yaml
docs/: BACKLOG.md  DEVELOPMENT_LOG.md  ECOSYSTEM_MAP.md  INFRASTRUCTURE.md  LESSONS_LEARNED_SESSION_5.md  MAPEAMENTO_COMPLETO_7_PROJETOS.md  PROJECT_STATE.md  README_COMPLEMENTAR.md  SESSION_2026-03-18.md  TECHNICAL_STATE.md  🌐 Qualia Core REST API.md  🎓 LESSONS_LEARNED_SESSION_6 - API REST e Sentiment Analysis  🎓 LESSONS_LEARNED_SESSION_7.md  🎓 LESSONS_LEARNED_SESSION_8.2 - Infraestrutura Esperta.md  🏗️ INFRASTRUCTURE_GUIDE_UPDATED.md  🏗️ Próximos Passos de Infraestrutura - Qualia Core.md  📊 PROJECT_STATE_DEZEMBRO_2024_UPDATED.md  🔧 Notas Técnicas - Sessão 3.md  🛠️ Padrões de Implementação - Guia Prático.md
docs/archive/: setup-project (mudança de pasta).txt
docs/demos/: demo_qualia.py
docs/examples/: README.md  demo_transcript.txt  doc_teste.txt  test_doc.txt  transcript.txt  transcript_example.txt  transcript_teams.txt
docs/morto/: AVALIACAO_TECNICA_FEV2026.md  About Web Hoocks.md  BRAINSTORM_DESCRICAO_PRODUTO.md  INFRASTRUCTURE.md  PROJECT_STATE.md  (+6 more)
examples/: api_examples.py
ops/: __init__.py
pipeline_result.json/: pipeline_summary.yaml  sentiment_analyzer_result.json  word_frequency_result.json
qualia/: __main__.py  cli.py
qualia_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
results/: wordcloud_interactive.html
scripts/: quick_test_check.py  run_tests.py
test_suite_output/: test_document.txt
tests/: conftest.py  test_api.py  test_api_extended.py  test_api_fixed.py  test_async.py  test_cache_deps.py  test_cache_lru.py  test_cache_pipeline.py  test_cli.py  test_cli_config_watch.py  test_cli_create.py  test_cli_extended.py  test_cli_final.py  test_cli_interactive.py  test_cli_plugins_check.py  test_cli_remaining.py  test_config_registry.py  test_core.py  test_core_fixed.py  test_engine_edges.py  test_loader_errors.py  test_loader_recursive.py  test_monitor.py  test_performance.py  test_plugin_logic.py  test_pragmatic.py  test_stress.py  test_suite.py  test_thread_safety.py  test_transcription.py  test_visualizer_execution.py  test_webhooks.py  test_word_frequency_spacy.py
tools/: create_plugin.py
(+200 files in other folders)
